Adding setting of Java options for all program containers.